@@ -400,6 +400,9 @@ Release 2.8.0 - UNRELEASED
     YARN-3577. Misspelling of threshold in log4j.properties for tests.
     (Brahma Reddy Battula via aajisaka)
 
+    YARN-3584. Fixed attempt diagnostics format shown on the UI. (nijel via
+    jianhe)
+
 Release 2.7.1 - UNRELEASED
 
   INCOMPATIBLE CHANGES
